overflow underline fix and footnote link wrapping

--- a/src/_includes/scss/site.scss
+++ b/src/_includes/scss/site.scss
@@ -328,8 +328,11 @@ a {
     margin-bottom: 8px
 }
 
+.gefdocs-breakout-box a {
+  border-bottom-color: $gel-color--tundora;
+}
+
 .gefdocs-breakout-box p {
-    overflow: hidden;
     margin: 0;
     margin-bottom: 20px;
     font-weight: 400;
@@ -353,7 +356,7 @@ a {
         font-size: 14px;
         font-size: .875rem;
         line-height: 18px;
-        line-height: 1.125rem
+        line-height: 1.25rem
     }
 }
 
@@ -832,6 +835,10 @@ a.gefdocs-button.gefdocs-button__link-button {
 
 hr.footnotes-sep {
   display: none;
+}
+
+.footnotes-list a {
+  word-break: break-all;
 }
 
 sup.footnote-ref {
